HLS/vivado_hls.log
INFO: [HLS 200-10] Running 'D:/hardware/Vivado/Vivado/2018.3/bin/unwrapped/win64.o/vivado_hls.exe'
INFO: [HLS 200-10] For user 'wushen' on host 'desktop-ms2nal2' (Windows NT_amd64 version 6.2) on Tue Oct 15 16:24:41 +0800 2024
INFO: [HLS 200-10] In directory 'D:/code/github/Darkness_PYNQ/HLS'
INFO: [HLS 200-10] Opening project 'D:/code/github/Darkness_PYNQ/HLS/BatchNorm'.
INFO: [HLS 200-10] Adding design file '../src/BatchNorm/BatchNorm.cpp' to the project
INFO: [HLS 200-10] Adding design file '../src/BatchNorm/BatchNorm.h' to the project
INFO: [HLS 200-10] Adding design file '../src/BatchNorm/BatchNorm.cpp' to the project
INFO: [HLS 200-10] Adding design file '../src/BatchNorm/BatchNorm.h' to the project
INFO: [HLS 200-10] Opening solution 'D:/code/github/Darkness_PYNQ/HLS/BatchNorm/solution1'.
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-10] Setting target device to 'xc7z020clg400-2'
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
INFO: [HLS 200-10] Analyzing design file '../src/BatchNorm/BatchNorm.cpp' ... 
ERROR: [HLS 200-70] Compilation errors found: In file included from ../src/BatchNorm/BatchNorm.cpp:1:
../src/BatchNorm/BatchNorm.cpp:22:18: error: size of array has non-integer type 'ap_uint<16>'
    Dtype_t mean[num_features];
                 ^~~~~~~~~~~~
../src/BatchNorm/BatchNorm.cpp:23:22: error: size of array has non-integer type 'ap_uint<16>'
    Dtype_t variance[num_features];
                     ^~~~~~~~~~~~
../src/BatchNorm/BatchNorm.cpp:24:26: error: size of array has non-integer type 'ap_uint<16>'
    Dtype_t running_mean[num_features] = {0};
                         ^~~~~~~~~~~~
../src/BatchNorm/BatchNorm.cpp:25:25: error: size of array has non-integer type 'ap_uint<16>'
    Dtype_t running_var[num_features] = {1};
                        ^~~~~~~~~~~~
4 errors generated.
Failed during preprocessing.
    while executing
"source D:/code/github/Darkness_PYNQ/HLS/BatchNorm/solution1/csynth.tcl"
    invoked from within
"hls::main D:/code/github/Darkness_PYNQ/HLS/BatchNorm/solution1/csynth.tcl"
    ("uplevel" body line 1)
    invoked from within
"uplevel 1 hls::main {*}$args"
    (procedure "hls_proc" line 5)
    invoked from within
"hls_proc $argv"
